# zavodchat

./: README.md  docker-compose.yml
client/: .env  Dockerfile  Makefile  client.key  client.pem  download_model.sh.patch  package-lock.json  package.json  svelte.config.js  vite.config.js
client/src/: Makefile  app.html  login.css  login.svelte  main.css  main.svelte  register.svelte
client/src/common/: settings_textbox.svelte
client/src/lib/: emoji.js  focus_manager.svelte  notifs.svelte.js  rest.js  rest.svelte.js  select.js  sound.js  util.js
client/src/routes/: +page.svelte  auth.css  login.css  main.css  main.svelte
client/static/js/: vc_mic_denoiser.c  vc_mic_processor.js
sample_client/: README.md  client.html  client.js
server/: .gitignore  CMakeLists.txt  Dockerfile  PERMISSIONS.md  README.md  RESTAPI.md  SOCKETAPI.md  config.json  server.crt  server.csr  server.key  server.pass.key  swagger.yaml  time_test.cpp
server/src/: config.cpp  config.h  main.cpp  thread_pool.cpp  thread_pool.h
server/src/db/: conn_pool.cpp  conn_pool.h  init.cpp  init.h
server/src/resource/: auth.cpp  auth.h  base.cpp  base.h  blocked_user.cpp  blocked_user.h  channel.cpp  channel.h  channel_messages.cpp  channel_messages.h  clock.cpp  clock.h  dm.cpp  dm.h  emoji.cpp  emoji.h  file.cpp  file.h  file_utils.cpp  file_utils.h  friend.cpp  friend.h  json_utils.cpp  json_utils.h  message.cpp  message.h  notification_utils.cpp  notification_utils.h  notifications.cpp  notifications.h  params.cpp  params.h  preferences.cpp  preferences.h  role.cpp  role.h  role_utils.cpp  role_utils.h  server.cpp  server.h  (+14 more)
server/src/resource/utils/: channel.cpp  channel.h  file.cpp  file.h  json.cpp  notification.cpp  notification.h  role.cpp  role.h
server/src/socket/: main_server.cpp  main_server.h  server.cpp  server.h  thread_queue.h  vc_server.cpp  vc_server.h
(+109 files in other folders)
